# isopeptor

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: api.rst  commandline.rst  conf.py  index.rst  installation.rst  reference.rst  requirements.txt  workflow.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: index.doctree  isopeptor.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/isopeptor/: asa.html  bond.html  bond_length.html  cli.html  dihedrals.html  isopeptide.html  jess_wrapper.html  logistic_regression.html  structure.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: isopeptor.rst.txt
docs/_build/html/source/: isopeptor.html  modules.html
docs/source/: modules.rst
src/isopeptor/: asa.py  bond.py  bond_length.py  cli.py  constants.py  dihedrals.py  isopeptide.py  jess_wrapper.py  logistic_regression.py  model.py  structure.py  wrapper.py
src/isopeptor/resources/data/: templates
src/isopeptor/resources/jess/: Makefile
src/isopeptor/resources/model/: model.pkl
src/isopeptor/resources/models/: CnaA-like_omega_phi.pkl  CnaA-like_omega_psi.pkl  CnaA-like_phi_psi.pkl  CnaB-like_omega_phi.pkl  CnaB-like_omega_psi.pkl  CnaB-like_phi_psi.pkl  logistic_regression.pkl
tests/: test_isopeptide.py
tests/data/: structures
