[project]
name = "isopeptor"
version = "0.0.1"
authors = [
  { name="Francesco Costa", email="fcosta@ebi.ac.uk" },
]
description = "Package for isopeptide bond prediction and analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FranceCosta/isopeptor"
Issues = "https://github.com/FranceCosta/isopeptor/issues"